# CPM-Solver-rust

./: Cargo.toml  README.md
.github/workflows/: Release.yml  audit.yml  ci.yml
src/: activity.rs  app.rs  main.rs  project.rs  scheduler.rs
