[package]
name = "cpm_scheduler"
version = "0.1.0"
edition = "2021"
authors   = ["CPM Scheduler Team"]
description = "Enterprise-grade Critical Path Method scheduler"

[[bin]]
name = "cpm_scheduler"
path = "src/main.rs"

[dependencies]
# ── GUI ─────────────────────────────────────────────────────
# Requires Rust 1.78+  (cargo edition2024 in transitive deps)
eframe = { version = "0.27", features = ["default"] }
egui   = "0.27"

# ── Data ────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid       = { version = "1",   features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
